--- a/View/html/index.html
+++ b/View/html/index.html
@@ -7,13 +7,12 @@
     <link rel="stylesheet" href="/View/css/style.css">
 </head>
 <body>
-    <header class="">
+    <header class="header">
         <nav>
             <ul>
                 <li><a href="">Home</a></li>
-                <li><a href="">Contato</a></li>
+                <li><a href="">Garanta o seu</a></li>
                 <li><a href="">Sobre nós</a></li>
-                <li><a href="">Login</a></li>
             </ul>
 
 
@@ -23,14 +22,22 @@
 
     </header>
 
-    <main>
-        <section class="standard_margin"></section>
+    <main class="main-content">
+        <section class="wrapper">
+            <div class="image-text">
+                <div>
+                <img src="" alt="">
+                </div>
+                <div class="image-text_text">
+                    <h1>TRUCO!</h1>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident neque hic aut iure at sunt temporibus voluptates mollitia. Dolores voluptates consequatur veritatis architecto incidunt dolorem libero expedita culpa fuga exercitationem.</p>
+                </div>
+            </div>
+        
 
-        <h1> Compre o que desejar</h1>
 
 
-
-
+        </section>
     </main>
 
 
