--- a/View/css/style.css
+++ b/View/css/style.css
@@ -1,3 +1,57 @@
+@keyframes deslizarParaCima {
+    0% {
+        transform: translateY(0);
+    }
+    100% {
+        transform: translateY(-5px);
+    }
+}
+
+@keyframes mostrarBordaSuave {
+    0% {
+        border-bottom-color: transparent;
+    }
+    100% {
+        border-bottom-color: darkblue;
+    }
+}
+
+
+@keyframes fade {
+    0% {
+        opacity: 0;
+    }
+
+    100%{
+        opacity: 1;
+    }
+}
+
+
+
+.image-text_text h1{
+    font-size: 2.5rem;
+    
+    color: gold;
+}
+
+.main-content{
+    background-color: rgb(20, 19, 20);
+    height: 100vh
+}
+
+.image-text{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 0.5fr 1fr;
+}
+
+.wrapper{
+    max-width: 1200px;
+    margin-left:auto ;
+    margin-right: auto;
+}
+
 body{
     margin: 0;
     font-family: 'Times New Roman', Times, serif;
@@ -5,21 +59,41 @@ body{
 }
 
 nav a{
+    font-size: 1.25rem;
+
+    display: block;
     text-decoration: none;
     list-style: none;
     list-style-type: none;
     color: rgb(191, 204, 204);
+    padding: 1vh, 1vh;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
 }
 
-li {
+nav li {
     list-style: none;
+    border-bottom: 2px solid transparent;
+    transition: border-bottom 0.3s ease-in-out , background-color 0.3s ease-in-out;
+    justify-content: center;
+    align-items: center;
 }
+
+
 
 header{
     display: flex;
     width: 100%;
+    max-width: 1200px;
+    margin-left: auto ;
+    margin-right: auto;
+    max-height: 8vh;
     background-color: rgb(34, 34, 34);
     color: whitesmoke;
+    box-sizing: border-box;
+    align-items: center;
 }
 
 nav{
@@ -27,6 +101,21 @@ nav{
     width: 100%;
     padding-inline: 100px;
     padding-top: 10px;
+    
+}
+
+
+nav li:hover{
+    border-bottom: 2px solid darkblue;
+    background-color: grey;
+    transition: 0.2s ease-in;
+}
+
+nav a:hover {
+    
+    transform: translateY(-5px);
+    
+    color: darkblue;
 }
 
 ul{
